--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
+    "email-validator": "^2.0.4",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "i": "^0.3.7",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "npm": "^8.19.2"
   }
 }
