--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "mongoose": "^6.6.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "npm": "^8.19.2"
+    "nodemailer": "^6.8.0",
+    "npm": "^8.19.2",
+    "otp-generator": "^4.0.0"
   }
 }
+ 
