--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "dotenv": "^16.0.2",
     "email-validator": "^2.0.4",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "npm": "^8.19.2",
-    "otp-generator": "^4.0.0"
+    "otp-generator": "^4.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
- 
