--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
@@ -20,6 +21,7 @@
     "npm": "^8.19.2",
     "otp-generator": "^4.0.0",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0"
   }
 }
